Shield Stopper project

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,1 +1,14 @@
-/* You can add global styles to this file, and also import other style files */
+@font-face{
+    font-family:'digital-clock-font';
+    src: url('./assets/digital-7.ttf');
+}
+
+* {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+}
+
+body {
+    background: #343434;
+}
